--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
             </div>
             <div class="system-info">
                 <span class="info-label">LOCATION</span>
-                <span class="info-value">UNKNOWN</span>
+                <span class="info-value">CARTENON TEMPLE</span>
             </div>
             <div class="system-info">
                 <span class="info-label">TIME</span>
